docs(plan): record what stage 3 measured
The acceptance gate of the stage. Six suites green at 220 / 217 / 210 / 167 /
42 / 43, and the counts carry two baselines rather than one, because main was
merged into the branch between the plan commit and the first task: the middle
column was taken by running the suites at e25802f8 detached, so the merge's
tests are not booked to this stage. No count fell in either step.

What is citable is separated from what is not, because the machine was under
load between 4.2 and 7.2 throughout. The JOL footprint, the test counts, the
allocation counters and gc.alloc.rate.norm are counted; every ns/op is scouting
and says so.

Three findings that contradict what the plan expected are recorded rather than
smoothed over: the footprint table is unchanged not because nothing was added
but because a null reference field in existing padding is invisible to it; the
primitive map's write arm did not get worse; and the boxed lookup allocates 69
to 79 B per position rather than sixteen, most of it not boxing but
comparableClassFor reflection in treeified bins, because Long#hashCode of a
chunk index is chunkX ^ chunkZ.

The stage cost 1 890 lines in falco-instance for behaviour that did not change,
63 % of the new lines being Javadoc. That number is in the section, and so are
six things the stage did not achieve, the tick race first among them.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>